--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Hyderabad</title>
+    <title>Hyderabad-1</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
